--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<head>
+    <title>a Tag Lab</title>
+</head>
+<body>
+    <a href="https://flatironschool.com" target="_blank">Flatiron School</a>
+</body>
+
+</html>
